feat: audit fixes